--- a/examples/config_advanced.yaml
+++ b/examples/config_advanced.yaml
@@ -1,9 +1,9 @@
 # Contains the path to the directory or file to process
-path: '/g/kreshuk/yu/datasets/FOR2581/diploid/raw_noisy/PreProcessing/custom_netplantseg_original_one_rotate2d_fmaps16_96x4/1135.raw.nuclei_predictions.h5'
+path:
 
 preprocessing:
   # enable/disable preprocessing
-  state: False
+  state: True
   # key for H5 or ZARR, can be set to null if only one key exists in each file
   key: Null
   # channel to use if input image has shape CZYX or CYX, otherwise set to null
@@ -30,19 +30,19 @@ preprocessing:
 
 cnn_prediction:
   # enable/disable UNet prediction
-  state: False
+  state: True
   # key for H5 or ZARR, can be set to null if only one key exists in each file; null is recommended if the previous steps has state True
   key: Null
   # channel to use if input image has shape CZYX or CYX, otherwise set to null; null is recommended if the previous steps has state True
   channel: Null
   # Trained model name, more info on available models and custom models in the README
-  model_name: 'generic_confocal_3D_unet'
+  model_name: 'RIKEN20230824v160'
   # If a CUDA capable gpu is available and corrected setup use "cuda", if not you can use "cpu" for cpu only inference (slower)
   device: 'cuda'
   # how many subprocesses to use for data loading
   num_workers: 8
   # patch size given to the network (adapt to fit in your GPU mem)
-  patch: [100, 160, 160]
+  patch: [64, 96, 128]
   # stride between patches will be computed as `stride_ratio * patch`
   # recommended values are in range `[0.5, 0.75]` to make sure the patches have enough overlap to get smooth prediction maps
   stride_ratio: 0.75
@@ -52,8 +52,12 @@ cnn_prediction:
 cnn_postprocessing:
   # enable/disable cnn post processing
   state: False
+  # key for H5 or ZARR, can be set to null if only one key exists in each file; null is recommended if the previous steps has state True
+  key: Null
+  # channel to use if input image has shape CZYX or CYX, otherwise set to null; null is recommended if the previous steps has state True
+  channel: 1
   # if True convert to result to tiff
-  tiff: False
+  tiff: True
   # rescaling factor
   factor: [1, 1, 1]
   # spline order for rescaling
@@ -63,22 +67,31 @@ segmentation:
   # enable/disable segmentation
   state: True
   # key for H5 or ZARR, can be set to null if only one key exists in each file; null is recommended if the previous steps has state True
-  key: 'predictions'
+  key: Null
   # channel to use if prediction has shape CZYX or CYX, otherwise set to null; null is recommended if the previous steps has state True
-  channel: 1
+  channel: Null
   # Name of the algorithm to use for inferences. Options: MultiCut, MutexWS, GASP, DtWatershed
-  name: 'GASP'
+  name: 'LiftedMulticut'
+  # path to the directory containing the nuclei predictions (either probability maps or segmentation)
+  nuclei_predictions_path:
+  # whether the `nuclei_predictions_path` contains the probability maps (is_segmentation=False) or segmentation (is_segmentation=True)
+  is_segmentation: True
+  # key for H5 or ZARR, can be set to null if only one key exists in each file; null is recommended if the previous steps has state True
+  key_nuclei: Null
+  # channel to use if prediction has shape CZYX or CYX, otherwise set to null; null is recommended if the previous steps has state True
+  channel_nuclei: Null
+
   # Segmentation specific parameters here
   # balance under-/over-segmentation; 0 - aim for undersegmentation, 1 - aim for oversegmentation. (Not active for DtWatershed)
-  beta: 0.5
+  beta: 0.65
   # directory where to save the results
-  save_directory: 'test_key_channel_params_gasp_c1'
+  save_directory: 'LiftedMulticut'
   # enable/disable watershed
   run_ws: True
   # use 2D instead of 3D watershed
-  ws_2D: True
+  ws_2D: False
   # probability maps threshold
-  ws_threshold: 0.5
+  ws_threshold: 0.4
   # set the minimum superpixels size
   ws_minsize: 50
   # sigma for the gaussian smoothing of the distance transform
@@ -86,11 +99,15 @@ segmentation:
   # sigma for the gaussian smoothing of boundary
   ws_w_sigma: 0
   # set the minimum segment size in the final segmentation. (Not active for DtWatershed)
-  post_minsize: 50
+  post_minsize: 100
 
 segmentation_postprocessing:
   # enable/disable segmentation post processing
-  state: True
+  state: False
+  # key for H5 or ZARR, can be set to null if only one key exists in each file; null is recommended if the previous steps has state True
+  key: Null
+  # channel to use if input image has shape CZYX or CYX, otherwise set to null; null is recommended if the previous steps has state True
+  channel: Null
   # if True convert to result to tiff
   tiff: True
   # rescaling factor
