--- a/.github/workflows/build-deploy-on-conda.yml
+++ b/.github/workflows/build-deploy-on-conda.yml
@@ -30,7 +30,7 @@ jobs:
           # conda install conda=4.12.0 -y
           conda install --yes -c conda-forge mamba
           mamba install -q boa
-          mamba mambabuild -c conda-forge conda-recipe
+          # mamba mambabuild -c conda-forge conda-recipe
     - name: Create PlantSeg env
       run: |
           mamba create -n plant-seg -c local -c conda-forge plantseg pytest
