Fix GitHub Workflow: Conda Build | fix #219
Before it doesn't allow branch name to include `/` and `-` such as `qy/fix-github-actions`

--- a/.github/workflows/build-deploy-on-conda.yml
+++ b/.github/workflows/build-deploy-on-conda.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set PlantSeg version name
-      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      run: echo "RELEASE_VERSION=$(date +%Y%m%d%H%M%S)" >> $GITHUB_ENV
     - name: Print PlantSeg version name
       run: |
         echo $RELEASE_VERSION
