--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ copyright: Copyright &copy; 2019 - 2024 Lorenzo Cerrone, Adrian Wolny, Qin Yu
 theme:
   name: material
   favicon: images/favicon.ico
-  logo: logo_white.png
+  logo: logos/logo_white.png
   icon:
     repo: fontawesome/brands/github
   palette:
@@ -47,13 +47,32 @@ extra:
       link: https://github.com/pyapp-kit/magicgui
       name: PlantSeg on GitHub
 
+markdown_extensions:
+  - abbr
+  - attr_list
+  - md_in_html
+  - admonition
+  - pymdownx.extra
+  - pymdownx.details
+  - pymdownx.snippets
+  - pymdownx.highlight
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+
 nav:
   - Overview: index.md
   - Getting Started:
+    - chapters/getting_started/index.md
     - Installation: chapters/getting_started/installation.md
-    - Quick Start: chapters/getting_started/quick_start.md
     - Contributing: chapters/getting_started/contributing.md
     - Troubleshooting: chapters/getting_started/troubleshooting.md
+  - Models and Data:
+    - chapters/plantseg_models/index.md
+    - Training: chapters/plantseg_models/training.md
   - Usage:
     - chapters/plantseg_interactive_napari/index.md
     - Data Processing: chapters/plantseg_interactive_napari/data_processing.md
@@ -74,19 +93,3 @@ nav:
     - Data Processing: chapters/python_api/data_processing.md
     - Prediction: chapters/python_api/cnn_predictions.md
     - Segmentation: chapters/python_api/segmentation.md
-
-markdown_extensions:
-  - abbr
-  - attr_list
-  - md_in_html
-  - admonition
-  - pymdownx.extra
-  - pymdownx.details
-  - pymdownx.snippets
-  - pymdownx.highlight
-  - pymdownx.superfences
-  - pymdownx.tabbed:
-      alternate_style: true
-  - pymdownx.emoji:
-      emoji_index: !!python/name:material.extensions.emoji.twemoji
-      emoji_generator: !!python/name:material.extensions.emoji.to_svg
