update all string references from old hci repo to kreshuklab

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -42,5 +42,5 @@ test:
   run:
     - pytest
 about:
-  home: https://github.com/hci-unihd/plant-seg
+  home: https://github.com/kreshuklab/plant-seg
   license: MIT
