--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,10 +70,17 @@ nav:
     - Installation: chapters/getting_started/installation.md
     - Contributing: chapters/getting_started/contributing.md
     - Troubleshooting: chapters/getting_started/troubleshooting.md
-  - Models and Data:
+  - PlantSeg Functionalities:
+    - XXX
+    - Data Processing: XXX
+    - Prediction: XXX
+    - Models: XXX
+    - Segmentation: XXX
+  - Dataset and Training:
     - chapters/plantseg_models/index.md
+    - Custom Datasets: XXX
     - Training: chapters/plantseg_models/training.md
-  - Usage:
+  - Napari GUI:
     - chapters/plantseg_interactive_napari/index.md
     - Data Processing: chapters/plantseg_interactive_napari/data_processing.md
     - Main Workflow: chapters/plantseg_interactive_napari/unet_gasp_workflow.md
@@ -88,8 +95,29 @@ nav:
     - Segmentation: chapters/plantseg_classic_gui/segmentation.md
   - Classic CLI:
     - chapters/plantseg_classic_cli/index.md
-  - Python API:
+  - API:
     - chapters/python_api/index.md
+    - plantseg.io: chapters/python_api/io.md
     - Data Processing: chapters/python_api/data_processing.md
     - Prediction: chapters/python_api/cnn_predictions.md
     - Segmentation: chapters/python_api/segmentation.md
+
+plugins: 
+  - search
+  - autorefs
+  - mkdocstrings:
+      handlers:
+        python:
+          import:
+            - https://docs.python.org/3/objects.inv
+            - https://numpy.org/doc/stable/objects.inv
+          options:
+            docstring_style: google
+            show_source: true
+            show_signature_annotations: true
+            show_root_heading: true
+            show_root_full_path: true
+            show_bases: true
+            docstring_section_style: list
+
+
