--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -99,8 +99,8 @@ nav:
     - chapters/python_api/index.md
     - plantseg.io: chapters/python_api/io.md
     - plantseg.dataprocessing: chapters/python_api/data_processing.md
-    - Prediction: chapters/python_api/cnn_predictions.md
-    - Segmentation: chapters/python_api/segmentation.md
+    - plantseg.predictions: chapters/python_api/cnn_predictions.md
+    - plantseg.segmentation: chapters/python_api/segmentation.md
 
 plugins: 
   - search
