test  screenshots on windows

--- a/.github/workflows/build-deploy-book.yml
+++ b/.github/workflows/build-deploy-book.yml
@@ -9,7 +9,7 @@ permissions:
   contents: write
 jobs:
   deploy-book:
-    runs-on: macos-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
       - name: Set PlantSeg version name
