--- a/.github/workflows/build-deploy-book.yml
+++ b/.github/workflows/build-deploy-book.yml
@@ -53,6 +53,7 @@ jobs:
         run: |
             conda activate plant-seg
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
+      - run: which python
       - uses: actions/cache@v4
         with:
           key: mkdocs-material-${{ env.cache_id }}
