--- a/.github/workflows/build-deploy-book.yml
+++ b/.github/workflows/build-deploy-book.yml
@@ -5,6 +5,8 @@ on:
       - master
       - main
       - qy/migrate-to-mkdocs
+      - debug_ci
+      
 permissions:
   contents: write
 jobs:
@@ -63,4 +65,4 @@ jobs:
         run: |
           pip install mkdocs-material mkdocstrings[python] mkdocs-autorefs markdown-exec
           mkdocs gh-deploy --force
-          
+
