--- a/.github/workflows/build-deploy-book.yml
+++ b/.github/workflows/build-deploy-book.yml
@@ -6,7 +6,7 @@ on:
       - main
       - qy/migrate-to-mkdocs
       - debug_ci
-      
+
 permissions:
   contents: write
 jobs:
@@ -63,6 +63,11 @@ jobs:
       - name: install mkdoks
         shell: bash -l {0}
         run: |
+          which python
+          conda activate plant-seg
+          which python
           pip install mkdocs-material mkdocstrings[python] mkdocs-autorefs markdown-exec
           mkdocs gh-deploy --force
+          which python
+          
 
