--- a/.github/workflows/build-deploy-book.yml
+++ b/.github/workflows/build-deploy-book.yml
@@ -3,9 +3,6 @@ on:
   push:
     branches:
       - master
-      - main
-      - qy/migrate-to-mkdocs
-      - debug_ci
 
 permissions:
   contents: write
@@ -19,7 +16,7 @@ jobs:
       - uses: tlambert03/setup-qt-libs@v1
       - name: Build display
         run: |
-            /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1920x1200x24 -ac +extension GLX
+          /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1920x1200x24 -ac +extension GLX
       - name: Set PlantSeg version name
         run: echo "RELEASE_VERSION=DOC_RELESE" >> $GITHUB_ENV
       - name: Print PlantSeg version name
@@ -29,13 +26,10 @@ jobs:
         run: |
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-      # - uses: actions/setup-python@v5
-      #   with:
-      #    python-version: 3.x
       - uses: conda-incubator/setup-miniconda@v2
         with:
           auto-activate-base: true
-          activate-environment: ""
+          activate-environment: ''
           channels: local,conda-forge,defaults
           channel-priority: false
       - shell: bash -l {0}
@@ -44,15 +38,15 @@ jobs:
       - name: Build PlantSeg
         shell: bash -l {0}
         run: |
-            conda install -q conda-build
-            conda build -c conda-forge conda-recipe
+          conda install -q conda-build
+          conda build -c conda-forge conda-recipe
       - name: Create PlantSeg env
         run: |
-            conda create -n plant-seg -c local -c conda-forge pyqt plantseg
+          conda create -n plant-seg -c local -c conda-forge pyqt plantseg
       - name: Activate PlantSeg env
         shell: bash -l {0}
         run: |
-            conda activate plant-seg
+          conda activate plant-seg
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
       - uses: actions/cache@v4
         with:
@@ -66,5 +60,3 @@ jobs:
           conda activate plant-seg
           pip install mkdocs-material mkdocstrings[python] mkdocs-autorefs markdown-exec
           mkdocs gh-deploy --force
-          
-
