Doc: Fix and update rescaling widget screenshot docs

--- a/environment-dev.yaml
+++ b/environment-dev.yaml
@@ -25,4 +25,9 @@ dependencies:
   - napari
   - python-graphviz
   - bioimageio.core>=0.6.5
+  - mkdocs-material
+  - mkdocstrings-python
+  - mkdocs-autorefs
+  - pip:
+      - markdown-exec
 # then `pip install -e .`
