--- a/environment-dev.yaml
+++ b/environment-dev.yaml
@@ -26,8 +26,10 @@ dependencies:
   - python-graphviz
   - bioimageio.core>=0.6.5
   - mkdocs-material
-  - mkdocstrings-python
   - mkdocs-autorefs
+  - mkdocs-git-revision-date-localized-plugin
+  - mkdocs-git-committers-plugin-2
+  - mkdocstrings-python
   - pip:
       - markdown-exec
 # then `pip install -e .`
