Doc: Add MKDOCS_GIT_COMMITTERS_APIKEY

--- a/.github/workflows/build-deploy-book.yml
+++ b/.github/workflows/build-deploy-book.yml
@@ -61,3 +61,5 @@ jobs:
           conda activate plant-seg
           pip install mkdocs-material mkdocs-git-revision-date-localized-plugin mkdocs-git-committers-plugin-2 mkdocs-autorefs mkdocstrings[python] markdown-exec
           mkdocs gh-deploy --force
+        env:
+          MKDOCS_GIT_COMMITTERS_APIKEY: ${{ secrets.MKDOCS_GIT_COMMITTERS_APIKEY }}
