Pre-commit: Use `crate-ci/typos` and checked manually
Added "OME", "ND" and "datas" as exceptions

--- a/environment-dev.yaml
+++ b/environment-dev.yaml
@@ -25,6 +25,7 @@ dependencies:
   - napari
   - python-graphviz
   - bioimageio.core>=0.6.5
+  - pre-commit
   - mkdocs-material
   - mkdocs-autorefs
   - mkdocs-git-revision-date-localized-plugin
