Pre-commit: Use `astral-sh/ruff`'s formatter
* Line width 120
* Keep quotation marks unchanged

Co-authored-by: Lorenzo Cerrone <lorenzo.cerrone@gmail.com>
Co-authored-by: Adrian Wolny <wolny101@gmail.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,3 +15,6 @@ repos:
       - id: ruff
         types_or: [python, pyi, jupyter]
         args: [--fix]
+      - id: ruff-format
+        types_or: [python, pyi, jupyter]
+        args: [--config=ruff.toml]
