Pre-commit: Combine configuration files

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,4 +17,4 @@ repos:
         args: [--fix]
       - id: ruff-format
         types_or: [python, pyi, jupyter]
-        args: [--config=ruff.toml]
+        args: [--config=pyproject.toml]
