--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,28 @@
 [tool.typos.default.extend-words]
-nd = "nd"  # N-dimensional (ND)
-ome = "ome"  # Open Microscopy Environment (OME)
-datas = "datas"  # pyinstaller
+nd = "nd"       # N-dimensional (ND)
+ome = "ome"     # Open Microscopy Environment (OME)
+datas = "datas" # pyinstaller
 
 [tool.ruff]
 line-length = 120
 
 [tool.ruff.format]
 quote-style = "preserve"
+
+[tool.bumpversion]
+current_version = "1.8.0"
+parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
+serialize = ["{major}.{minor}.{patch}"]
+
+[[tool.bumpversion.files]]
+filename = "plantseg/__version__.py"
+search = "{current_version}"
+replace = "{new_version}"
+
+# Optional git settings
+tag = true
+commit = true
+tag_message = "Bump version: {current_version} → {new_version}"
+allow_dirty = false
+message = "Bump version: {current_version} → {new_version}"
+commit_args = ""
