--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,16 +13,14 @@ quote-style = "preserve"
 current_version = "1.8.0"
 parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
 serialize = ["{major}.{minor}.{patch}"]
-
-[[tool.bumpversion.files]]
-filename = "plantseg/__version__.py"
 search = "{current_version}"
 replace = "{new_version}"
-
-# Optional git settings
 tag = true
 commit = true
 tag_message = "Bump version: {current_version} → {new_version}"
 allow_dirty = false
 message = "Bump version: {current_version} → {new_version}"
-commit_args = ""
+commit_args = "--no-verify"
+
+[[tool.bumpversion.files]]
+filename = "plantseg/__version__.py"
