test: check if MkDocs build in GitHub Actions

--- a/.github/workflows/build-deploy-book.yml
+++ b/.github/workflows/build-deploy-book.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - master
-      - qy/mkdocs-author
+      - qy/fix-docs-qt-napari-path
 
 permissions:
   contents: write
