--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
     hooks:
       - id: ruff
         types_or: [python, pyi, jupyter]
-        args: [--fix]
+        args: [--fix, --select, I]
       - id: ruff-format
         types_or: [python, pyi, jupyter]
         args: [--config=pyproject.toml]
