--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ datas = "datas" # pyinstaller
 [tool.ruff]
 line-length = 120
 
+[tool.ruff.lint]
+extend-select = ["I"]
+
 [tool.ruff.format]
 quote-style = "preserve"
 
