--- a/.github/workflows/build-deploy-on-conda.yml
+++ b/.github/workflows/build-deploy-on-conda.yml
@@ -3,46 +3,71 @@ name: Conda Build
 on: [push]
 
 jobs:
-  build-linux:
+  build-and-test-linux:
     runs-on: ubuntu-latest
     env:
-      DISPLAY: ':99.0'
+      DISPLAY: ":99.0"
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: tlambert03/setup-qt-libs@v1
-      - name: Build display
+      # Checkout the repository
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      # Set up Qt libraries (required for PyQt applications)
+      - name: Set Up Qt Libraries
+        uses: tlambert03/setup-qt-libs@v1
+
+      # Start X virtual framebuffer for GUI testing
+      - name: Start Xvfb
         run: |
-          /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1920x1200x24 -ac +extension GLX
-      - name: Set PlantSeg version name
+          /sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid \
+          --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1920x1200x24 -ac +extension GLX
+
+      # Set the PlantSeg version based on the current date and time
+      - name: Set PlantSeg Version
         run: echo "RELEASE_VERSION=$(date +%Y%m%d%H%M%S)" >> $GITHUB_ENV
-      - name: Print PlantSeg version name
-        run: |
-          echo $RELEASE_VERSION
-      - uses: conda-incubator/setup-miniconda@v2
+
+      # Print the PlantSeg version name (for debugging purposes)
+      - name: Print PlantSeg Version
+        run: echo $RELEASE_VERSION
+
+      # Set up Miniconda
+      - name: Set Up Miniconda
+        uses: conda-incubator/setup-miniconda@v2
         with:
           auto-activate-base: true
-          activate-environment: ''
+          activate-environment: ""
           channels: local,conda-forge,defaults
           channel-priority: false
-      - shell: bash -l {0}
-        run: |
-          conda info --envs
-      - name: Build PlantSeg
+
+      # Display available Conda environments (for debugging purposes)
+      - name: List Conda Environments
+        shell: bash -l {0}
+        run: conda info --envs
+
+      # Build the PlantSeg Conda package
+      - name: Build PlantSeg Package
         shell: bash -l {0}
         run: |
           conda install -q conda-build
           conda build -c conda-forge conda-recipe
-      - name: Create PlantSeg env
+
+      # Create a Conda environment for testing
+      - name: Create PlantSeg Test Environment
         run: |
           conda create -n plant-seg -c local -c conda-forge pyqt plantseg pytest pytest-qt
-      - name: Run pytest
+
+      # Run tests using pytest
+      - name: Run Tests with Pytest
         shell: bash -l {0}
         run: |
           conda activate plant-seg
           pytest
           conda deactivate
-      - name: Deploy on conda
-        if: ${{ startsWith( github.ref, 'refs/tags/') && success() }}
+
+      # Deploy the package to Anaconda (only on tag push)
+      - name: Deploy to conda-forge
+        if: ${{ startsWith(github.ref, 'refs/tags/') && success() }}
         env:
           ANACONDA_SECRET: ${{ secrets.ANACONDA_TOKEN }}
         shell: bash -l {0}
