--- a/environment-dev.yaml
+++ b/environment-dev.yaml
@@ -1,30 +1,35 @@
-name: plantseg-v2-dev
+name: plantseg-seg-dev
 channels:
   - pytorch
   - nvidia
   - conda-forge
 dependencies:
   - python
-  - pydantic>2
-  - h5py
-  - zarr
-  - requests
-  - pyyaml
-  - scikit-image
-  - tifffile
-  - vigra
-  - cudnn
+  # Neural Network and GPU
+  - conda-forge::cudnn=9
   - pytorch
   - torchvision
   - pytorch-cuda=12.1
-  - cuda-version=12.3
+  - cuda-version>=12.1
+  # Bioimage and CV
+  - tifffile
+  - h5py
+  - zarr
+  - vigra
   - python-elf
-  - pytest
-  - pytest-qt
+  - python-graphviz
+  - scikit-image
+  - bioimageio.core>=0.6.5
+  # GUI
   - pyqt
   - napari
-  - python-graphviz
-  - bioimageio.core>=0.6.5
+  # Other
+  - requests
+  - pyyaml
+  - pydantic>2
+  - pytest
+  - pytest-qt
+  # Extra
   - pre-commit
   - bump-my-version
   - mkdocs-material
